@@ -27,6 +27,7 @@ Stop:   YYYY/MM/DD HH:MM:SS stop time in UTC
 Options:
 -h, --help             Display this help information
 -s, --lwasv            Calculate for LWA-SV instead of LWA1
+-o, --ovro-lwa         Calculate for OVRO-LWA instead of LWA1
 -n, --n-samples        Number of samples to take between the start and stop
                        times (default = 11)
 -f, --file             Read MJDs to compute for from a file
@@ -54,7 +55,7 @@ def parseConfig(args):
 	
 	# Read in and process the command line flags
 	try:
-		opts, arg = getopt.getopt(args, "hsn:f:ijcuq", ["help", "lwasv", "n-samples", "file=", "igs", "jpl", "code", "ustec", "uqr"])
+		opts, arg = getopt.getopt(args, "hson:f:ijcuq", ["help", "lwasv", "ovro-lwa", "n-samples", "file=", "igs", "jpl", "code", "ustec", "uqr"])
 	except getopt.GetoptError, err:
 		# Print help information and exit:
 		print str(err) # will print something like "option -a not recognized"
@@ -66,6 +67,8 @@ def parseConfig(args):
 			usage(exitCode=0)
 		elif opt in ('-s', '--lwasv'):
 			config['site'] = 'lwasv'
+		elif opt in ('-o', '--ovro-lwa'):
+			config['site'] = 'ovro'
 		elif opt in ('-n', '--n-samples'):
 			config['nSamples'] = int(value)
 		elif opt in ('-f', '--file'):
@@ -134,6 +137,9 @@ def main(args):
 		site = stations.lwa1
 	elif config['site'] == 'lwasv':
 		site = stations.lwasv
+	elif config['site'] == 'ovro':
+		site = stations.lwa1
+		site.lat, site.lon, site.elev = ('37.2397808', '-118.2816819', 1183.4839)
 	else:
 		raise RuntimeError("Unknown site: %s" % config['site'])
 	obs = site.getObserver()
